<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="a"
            type="winwin.customer.app.ui.welcome.WelcomeActivity" />
        <variable
            name="vm"
            type="winwin.customer.app.ui.welcome.WelcomeViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.welcome.WelcomeActivity">


        <ImageView
            android:id="@+id/imgLocation"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_above="@+id/linearLayout"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="@dimen/_40sdp"
            app:srcCompat="@drawable/welcome" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:gravity="bottom">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_15sdp"
                android:text="@string/location_request"
                style="@style/location_request"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20sdp"
                android:text="@string/location_description"
                android:textColor="#9F9696"
                style = "@style/roboto_medium"/>

            <Button
                android:onClick="@{(v)->vm.openInputPhone()}"
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_50sdp"
                android:text="@string/welcome_button_continue"
                style="@style/AppButtonStyle"
                android:enabled="@{vm.checkLocationPermission}"
                />
        </LinearLayout>

    </RelativeLayout>
</layout>