<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="a"
            type="winwin.customer.app.ui.login.LoginActivity" />
        <variable
            name="vm"
            type="winwin.customer.app.ui.login.LoginViewModel" />
    </data>

    <RelativeLayout
        android:onClick="@{(v)->a.hideKeyboard()}"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:clickable="false"
            android:focusable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:isScrollContainer="true"
            android:layout_centerInParent="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_marginBottom="@dimen/_22sdp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:src="@drawable/ic_launcher_foreground"
                    android:contentDescription="logo"
                    app:tint="@color/white" />

                <EditText
                    style="@style/MyEditTextStyle"
                    android:background="@drawable/rounded_edittext_background"
                    android:id="@+id/username_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:text="@={vm.username}"
                    android:inputType="text"/>

                <EditText
                    style="@style/MyEditTextStyle"
                    android:background="@drawable/rounded_edittext_background"
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:text="@={vm.password}"
                    android:inputType="textPassword"/>

                <Button
                    android:onClick="@{(v)->vm.login()}"
                    style="@style/MyButtonStyle"
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login" />

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</layout>