<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.text.TextUtils" />
        <variable
            name="a"
            type="winwin.customer.app.ui.input.phone.PhoneActivity" />
        <variable
            name="vm"
            type="winwin.customer.app.ui.input.phone.PhoneViewModel" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.input.phone.PhoneActivity">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/btnContinue"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:orientation="vertical">

            <ImageView
                android:onClick="@{(v)->vm.doBack()}"
                android:id="@+id/imgBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_icon_back"
                android:visibility="gone"/>

            <TextView
                style="@style/roboto_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/welcome_winwin"
                android:textColor="@color/black"
                android:textSize="@dimen/_25ssp"/>

            <TextView
                style="@style/roboto_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:text="@string/please_enter_phone"
                android:textColor="@color/grey_light"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/phone_background">

                <com.hbb20.CountryCodePicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginVertical="@dimen/_5sdp"
                    app:ccp_showNameCode="false"
                    app:ccp_defaultPhoneCode="84"
                    app:ccpDialog_showCloseIcon="true"
                    >
                </com.hbb20.CountryCodePicker>

                <FrameLayout
                    android:layout_width="@dimen/_1sdp"
                    android:layout_height="match_parent"
                    android:background="@color/grey_light">
                </FrameLayout>

                <EditText
                    style="@style/roboto_bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:hint="@string/your_phone_number"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:background="@drawable/edittext_background"
                    android:textColor="@color/grey_light"
                    android:maxLength="9"
                    android:onTextChanged="@{vm.onTextChanged}"/>
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnContinue"
            style="@style/AppButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginBottom="69dp"
            android:enabled="@{!TextUtils.isEmpty(vm.phoneNumber) &amp;&amp; vm.phoneNumber.length() == 9}"
            android:text="@string/welcome_button_continue"
            android:onClick="@{(v)->vm.clickButton()}"/>
    </RelativeLayout>
</layout>