<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="f"
            type="winwin.customer.app.ui.fragment.home.HomeFragment" />
        <variable
            name="vm"
            type="winwin.customer.app.ui.fragment.home.HomeFragmentViewModel" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp">

                <TextView
                    style="@style/roboto_bold"
                    android:id="@+id/txtNameAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:textColor="#75787D"
                    android:text="@string/hello_account"/>
                <TextView
                    style="@style/roboto_bold"
                    android:id="@+id/txtHello"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtNameAccount"
                    android:text="@string/winwin_hello"
                    android:textSize="@dimen/_25ssp"
                    android:textColor="@color/black"/>
                <EditText
                    android:id="@+id/searchView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtHello"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/search_background"
                    android:paddingVertical="@dimen/_10sdp"
                    android:paddingLeft="@dimen/_8sdp"
                    android:hint="@string/search_hint"
                    android:textColor="#424242C9"
                    style="@style/roboto_bold"
                    android:drawableLeft="@drawable/ic_icon_search"/>
                <androidx.cardview.widget.CardView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginLeft="@dimen/_4sdp"
                    app:cardCornerRadius="@dimen/_15sdp"
                    app:cardElevation="@dimen/_2sdp"
                    >

                    <ImageButton
                        android:onClick="@{(v)->vm.openNotification()}"
                        android:id="@+id/imgBtnNotification"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:background="@color/white"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_icon_notification"/>
                </androidx.cardview.widget.CardView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/searchView"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_toStartOf="@+id/fl"
                    tools:itemCount="1"
                    tools:listitem="@layout/item_category">
                </androidx.recyclerview.widget.RecyclerView>

                <FrameLayout
                    android:id="@+id/fl"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="match_parent"
                    android:layout_alignTop="@+id/rcCategory"
                    android:layout_alignBottom="@+id/rcCategory"
                    android:layout_alignParentRight="true">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cadNext"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_gravity="left"
                        android:layout_marginLeft="@dimen/_4sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        app:cardCornerRadius="@dimen/_15sdp"
                        app:cardElevation="@dimen/_2sdp">

                        <ImageButton
                            android:onClick="@{(v)->vm.showAllCategory()}"
                            android:id="@+id/imgNext"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/white"
                            android:src="@drawable/ic_icon_next" />
                    </androidx.cardview.widget.CardView>
                </FrameLayout>



                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcBanner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rcCategory"
                    android:layout_marginTop="@dimen/_8sdp"
                    tools:itemCount="1"
                    tools:listitem="@layout/item_banner">

                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    style="@style/roboto_bold"
                    android:id="@+id/txtSg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/rcBanner"
                    android:layout_toStartOf="@+id/txtShowAllSg"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:text="@string/propose"
                    android:textColor="@color/title_home_page"
                    android:textSize="@dimen/_16ssp" />

                <TextView
                    android:onClick="@{(v)->vm.showAllPropose()}"
                    style="@style/roboto_bold"
                    android:id="@+id/txtShowAllSg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/rcBanner"
                    android:layout_alignTop="@+id/txtSg"
                    android:layout_alignBottom="@+id/txtSg"
                    android:gravity="center"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:text="@string/show_all"
                    android:textColor="@color/green_light" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcSg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtSg"
                    tools:itemCount="1"
                    tools:listitem="@layout/item_food"></androidx.recyclerview.widget.RecyclerView>


                <TextView
                    style="@style/roboto_bold"
                    android:id="@+id/txtPb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/rcSg"
                    android:layout_toStartOf="@+id/txtShowAllPb"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:text="@string/popular_food"
                    android:textColor="@color/title_home_page"
                    android:textSize="@dimen/_16ssp" />

                <TextView
                    android:onClick="@{(v)->vm.showAllPopularFood()}"
                    style="@style/roboto_bold"
                    android:id="@+id/txtShowAllPb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/rcSg"
                    android:layout_alignTop="@+id/txtPb"
                    android:layout_alignBottom="@+id/txtPb"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:gravity="center"
                    android:text="@string/show_all"
                    android:textColor="@color/green_light" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcPb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtPb"
                    tools:itemCount="1"
                    tools:listitem="@layout/item_food">

                </androidx.recyclerview.widget.RecyclerView>
            </RelativeLayout>
        </ScrollView>
    </FrameLayout>
</layout>