<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="a"
            type="winwin.customer.app.ui.otp.LoginOTPActivity" />

        <variable
            name="vm"
            type="winwin.customer.app.ui.otp.LoginOTPViewModel" />

        <import type="android.view.View" />
        <import type="android.text.InputType"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="@dimen/_20ssp"
        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_icon_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </ImageView>

        <TextView
            android:id="@+id/textView"
            style="@style/new_password_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/new_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

        </TextView>

        <TextView
            android:id="@+id/textView2"
            style="@style/new_password_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/new_password_subtext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

        </TextView>

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_marginTop="@dimen/_10sdp"
            android:stretchColumns="*">

            <TableRow>
                <EditText
                    android:id="@+id/edtOTP1"
                    android:layout_width="@dimen/_20ssp"
                    android:layout_height="wrap_content"
                    android:text="@={vm.otp1}"
                    android:maxLength="1"
                    android:maxLines="1"
                    style="@style/new_password_text"
                    android:textAlignment="center"
                    android:background="@drawable/bg_edt_otp"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:inputType="@{vm.isShown ? InputType.TYPE_CLASS_TEXT : (InputType.TYPE_CLASS_TEXT | InputType.TYPE_TEXT_VARIATION_PASSWORD)}"
                    >

                </EditText>

                <EditText
                    android:id="@+id/edtOTP2"
                    android:layout_width="@dimen/_20ssp"
                    android:layout_height="wrap_content"
                    android:text="@={vm.otp2}"
                    android:maxLength="1"
                    android:maxLines="1"
                    style="@style/new_password_text"
                    android:textAlignment="center"
                    android:background="@drawable/bg_edt_otp"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:inputType="@{vm.isShown ? InputType.TYPE_CLASS_TEXT : (InputType.TYPE_CLASS_TEXT | InputType.TYPE_TEXT_VARIATION_PASSWORD)}"
                    >

                </EditText>

                <EditText
                    android:id="@+id/edtOTP3"
                    android:layout_width="@dimen/_20ssp"
                    android:layout_height="wrap_content"
                    android:text="@={vm.otp3}"
                    android:maxLength="1"
                    android:maxLines="1"
                    style="@style/new_password_text"
                    android:textAlignment="center"
                    android:background="@drawable/bg_edt_otp"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:inputType="@{vm.isShown ? InputType.TYPE_CLASS_TEXT : (InputType.TYPE_CLASS_TEXT | InputType.TYPE_TEXT_VARIATION_PASSWORD)}"


                    >

                </EditText>

                <EditText
                    android:id="@+id/edtOTP4"
                    android:layout_width="@dimen/_20ssp"
                    android:layout_height="wrap_content"
                    android:text="@={vm.otp4}"
                    android:maxLength="1"
                    android:maxLines="1"
                    style="@style/new_password_text"
                    android:textAlignment="center"
                    android:background="@drawable/bg_edt_otp"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:inputType="@{vm.isShown ? InputType.TYPE_CLASS_TEXT : (InputType.TYPE_CLASS_TEXT | InputType.TYPE_TEXT_VARIATION_PASSWORD)}"

                    >

                </EditText>

                <EditText
                    android:id="@+id/edtOTP5"
                    android:layout_width="@dimen/_20ssp"
                    android:layout_height="wrap_content"
                    android:text="@={vm.otp5}"
                    android:maxLength="1"
                    android:maxLines="1"
                    style="@style/new_password_text"
                    android:textAlignment="center"
                    android:background="@drawable/bg_edt_otp"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:inputType="@{vm.isShown ? InputType.TYPE_CLASS_TEXT : (InputType.TYPE_CLASS_TEXT | InputType.TYPE_TEXT_VARIATION_PASSWORD)}"

                    >

                </EditText>

                <EditText
                    android:id="@+id/edtOTP6"
                    android:layout_width="@dimen/_20ssp"
                    android:layout_height="wrap_content"
                    android:text="@={vm.otp6}"
                    android:maxLength="1"
                    android:maxLines="1"
                    style="@style/new_password_text"
                    android:textAlignment="center"
                    android:background="@drawable/bg_edt_otp"
                    android:inputType="@{vm.isShown ? InputType.TYPE_CLASS_TEXT : (InputType.TYPE_CLASS_TEXT | InputType.TYPE_TEXT_VARIATION_PASSWORD)}"

                    >

                </EditText>

            </TableRow>



        </TableLayout>

        <TextView
            android:id="@+id/tvShowPw"
            style="@style/show_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/show_new_password"
            android:onClick="@{()->vm.showPw()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout">

        </TextView>

        <Button
            android:id="@+id/btnVerifyLoginOTP"
            style="@style/NextBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:onClick="@{()->vm.verifyOTP()}"
            android:text="Tiếp tục"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvShowPw"
            android:layout_marginTop="@dimen/_25sdp">

        </Button>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>